--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 
 </head>
 <body>
+    <header class="principal"></header>
+    <main class="principal">
     
+    </main>
+    <footer class="rodape"></footer>
 </body>
 </html>
