fixing some bugs

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-    <header class="principal"></header>
+    <header class="cabecalho"></header>
     <main class="principal">
     
     </main>
