--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
 </head>
 <body>
     <header class="cabecalho"></header>
-    <main class="principal">
-    
-    </main>
+    <main class="principal"> </main>
     <footer class="rodape"></footer>
 </body>
 </html>
