--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 
 </head>
 <body>
-    <header class="cabecalho"></header>
+    <header class="cabecalho">
+        <h1>Curso PHP</h1>
+        <h2>Índice dos exercíos</h2>
+    </header>
     <main class="principal"> </main>
     <footer class="rodape"></footer>
 </body>
