--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
         <h2>Índice dos exercíos</h2>
     </header>
     <main class="principal"> </main>
-    <footer class="rodape"></footer>
+    <footer class="rodape">
+        Curso PHP
+    </footer>
 </body>
 </html>
 
