--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
         <h1>Curso PHP</h1>
         <h2>Índice dos exercíos</h2>
     </header>
-    <main class="principal"> </main>
+    <main class="principal">
+        <div class="conteudo">
+            
+        </div>
+    </main>
     <footer class="rodape">
         Curso PHP
     </footer>
