Section 2.12 Start (creating menus)

--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
     </header>
     <main class="principal">
         <div class="conteudo">
-            
+            <nav class="modulos">
+                <div class="modulo">
+                    
+                </div>
+            </nav>
         </div>
     </main>
     <footer class="rodape">
