Changing index to blank

--- a/projects/pages-blank.html
+++ b/projects/pages-blank.html
@@ -33,15 +33,19 @@
 						Pages
 					</li>
 
-					<li class="sidebar-item">
-						<a class="sidebar-link" href="index.html">
-              <i class="align-middle" data-feather="sliders"></i> <span class="align-middle">Dashboard</span>
-            </a>
+					<li class="sidebar-item active">
+						<a  data-target="#register" data-toggle="collapse" class="sidebar-link collapsed">
+              				<i class="align-middle" data-feather="lock"></i> <span class="align-middle">Projeto Login</span>
+            			</a>
+						<ul id="ui" class="sidebar-dropdown list-unstyled collapse " data-parent="#sidebar">
+							<li class="sidebar-item"><a class="sidebar-link" href="main_page.php?&page_display=crud_orders">Gestão de OS</a></li>
+							<li class="sidebar-item"><a class="sidebar-link" href="main_page.php?&page_display=atpve_generator">Formulário ATPV-E</a></li>
+						</ul>
 					</li>
 
 					<li class="sidebar-item">
 						<a class="sidebar-link" href="pages-profile.html">
-              <i class="align-middle" data-feather="user"></i> <span class="align-middle">Profile</span>
+              <i class="align-middle" data-feather="crosshair"></i> <span class="align-middle">API</span>
             </a>
 					</li>
 
@@ -57,7 +61,7 @@
             </a>
 					</li>
 
-					<li class="sidebar-item active">
+					<li class="sidebar-item">
 						<a class="sidebar-link" href="pages-blank.html">
               <i class="align-middle" data-feather="book"></i> <span class="align-middle">Blank</span>
             </a>
