--- a/extra_html/index.htm
+++ b/extra_html/index.htm
@@ -11,21 +11,25 @@
     <header>
         <h1>Html Pratice</h1>
         <nav>
-            <a href="test.htm">00 Test</a>
+            <a href wm-nav="test.htm">00 Test</a>
+            <a href wm-nav="./page2.htm">Page 2</a>
         </nav>
     </header>
     <section id="content">
 
     </section>
     <script>
-        document.querySelectorAll('a').forEach(link => {
+        // ('a') for tag 
+        // ('[wm-nav]') for attribute
+        document.querySelectorAll('[wm-nav]').forEach(link => {
             const content = document.getElementById("content");
             console.log(link);
             link.onclick = function (e) 
             {
                 e.preventDefault();
-                fetch(link.href)
-                    .then(resp => resp.text)    
+                // fetch(link.href) old
+                fetch(link.getAttribute('wm-nav')) 
+                    .then(resp => resp.text())    
                     .then(html => content.innerHTML = html)    
             }
         } )
